# pakeditor

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/pakeditor/: ui.hpp
res/: master.glade
src/pakeditor/: main.cpp  ui.cpp
